--- a/src/Css/Navbar.css
+++ b/src/Css/Navbar.css
@@ -1,5 +1,5 @@
-.flex-end {
-  justify-content: flex-end;
+.flex-space-between {
+  justify-content: space-between;
 }
 .flex-start {
   justify-content: flex-start;
